force-app/main/default/objects/Product2/fields/Advantage_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Advantage_Item_Number__c</fullName>
    <label>Advantage Item Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>