force-app/main/default/objects/Product2/fields/Online_ISBN_ISSN__c.field-meta.xml
<CustomField>
    <fullName>Online_ISBN_ISSN__c</fullName>
    <label>Online ISBN ISSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>