force-app/main/default/objects/Product2/fields/Perpetual__c.field-meta.xml
<CustomField>
    <fullName>Perpetual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perpetual</label>
    <type>Checkbox</type>
</CustomField>