force-app/main/default/objects/Product2/fields/Print_ISBN_ISSN__c.field-meta.xml
<CustomField>
    <fullName>Print_ISBN_ISSN__c</fullName>
    <label>Print ISBN ISSN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>