force-app/main/default/objects/Product2/recordTypes/Journal.recordType-meta.xml
<RecordType>
    <fullName>Journal</fullName>
    <active>true</active>
    <description>A Journal Product</description>
    <label>Journal</label>
</RecordType>