force-app/main/default/objects/Product2/recordTypes/Journal_Collection.recordType-meta.xml
<RecordType>
    <fullName>Journal_Collection</fullName>
    <active>true</active>
    <description>A Journal Collection</description>
    <label>Journal Collection</label>
</RecordType>