force-app/main/default/objects/Product2/recordTypes/Online.recordType-meta.xml
<RecordType>
    <fullName>Online</fullName>
    <active>true</active>
    <description>An Online Product</description>
    <label>Online</label>
</RecordType>