force-app/main/default/objects/Product2/recordTypes/Online_Collection.recordType-meta.xml
<RecordType>
    <fullName>Online_Collection</fullName>
    <active>true</active>
    <description>An Online Collection</description>
    <label>Online Collection</label>
</RecordType>